Highlight selected rule, fixed overflow style for golden layout components

--- a/src-react/src/components/GoldenLayout/styles.scss
+++ b/src-react/src/components/GoldenLayout/styles.scss
@@ -13,6 +13,7 @@
 
 .lm_content {
   background: #1E1E1E;
+  overflow-y: auto;
 }
 
 .lm_dragProxy .lm_content {
